<resources>
    <string name="app_name">Выбираем обед</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="user_login">Имя пользователя (email)</string>
    <string name="user_password">Пароль</string>
    <string name="user_repeat_password">Повторите пароль</string>
    <string name="btn_login">Войти</string>
    <string name="user_create_account">Создать аккаунт</string>
    <string name="user_link_forget">Забыли пароль?</string>

    <string name="error_login">Неверное имя пользователя или пароль</string>
    <string name="user_name">Имя</string>
    <string name="btn_register">Регистрация</string>
    <string name="nav_list_default_color">Все блюда</string>
    <string name="nav_list_red_color">Красная метка</string>
    <string name="nav_list_green_color">Зеленая метка</string>
    <string name="nav_list_blue_color">Синяя метка</string>
    <string name="nav_list_orange_color">Оранжевая метка</string>
    <string name="nav_group">Группа</string>
    <string name="nav_invites">Приглашения</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_logout">Выйти</string>

    <string name="title_list">Список блюд</string>
    <string name="title_group">Группа</string>
    <string name="title_add_meal">Новое блюдо</string>
    <string name="title_invites">Приглашения</string>
    <string name="menu_add_meal">Добавить блюдо</string>

    <string name="error_save_meal">Ошибка при сохранении блюда!</string>
    <string name="meal_popup_action_delete">Удалить</string>
    <string name="menu_choose">Выбор блюд</string>
    <string name="dialog_sent_invite_title">Email получателя</string>
    <string name="dialog_accept_invite_message">Принять приглашение в группу от %s?</string>
    <string name="dialog_full_menu_title">Меню</string>
    <string name="error_network">Ошибка. Попробуйте позднее</string>
    <string name="meal_name">Название</string>
    <string name="menu_action_save">Сохранить</string>
    <string name="edit_meals_description_hint">Описание</string>
</resources>
