<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_group1"
        android:checkableBehavior="single"
        >
        <item
            android:id="@+id/nav_list"
            android:title="@string/nav_list"
            />

        <item
            android:id="@+id/nav_group"
            android:title="@string/nav_group"
            />
        <item
            android:id="@+id/nav_invites"
            android:title="@string/nav_invites"
            />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings"
            />

    </group>
    <group
        android:id="@+id/nav_group2"
        >
        <item android:id="@+id/nav_logout"
              android:title="@string/nav_logout"
            />
    </group>
</menu>
