<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/usernameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_0.5x">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_login"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_0.5x"
        >

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/user_password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <!--TODO make in future-->
    <!--<TextView android:id="@+id/link_forgot"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/user_link_forget"-->
    <!--android:gravity="center"-->
    <!--android:textSize="16sp"/>-->

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_1x"
        android:layout_marginBottom="@dimen/dimen_1x"
        android:text="@string/btn_login"
        />
    <TextView android:id="@+id/link_signup"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/user_create_account"
              android:gravity="center"
              android:textSize="@dimen/font_medium"/>


</merge>